--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="blocChat">
 
 <head lang="en">
   <meta charset="UTF-8">
@@ -9,7 +9,6 @@
 
 <body>
   <ui-view></ui-view>
-  <script src="/scripts/app.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
   <script src="https://cdn.firebase.com/libs/angularfire/2.0.1/angularfire.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.min.js"></script>
@@ -26,6 +25,7 @@
     };
     firebase.initializeApp(config);
   </script>
+  <script src="/scripts/app.js"></script>
 </body>
 
 </html>
