--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   </script>
   <script src="/scripts/app.js"></script>
   <script src="/scripts/services/Room.js"></script>
+  <script src="/scripts/controllers/LandingCtrl.js"></script>
 
 </body>
 
