--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head lang="en">
   <meta charset="UTF-8">
   <title>Bloc Base Project</title>
+  <link rel="stylesheet" href="/styles/normalize.css">
   <link rel="stylesheet" href="/styles/main.css">
+  <link rel="stylesheet" href="/styles/modalLook.css">
 </head>
 
 <body>
@@ -12,6 +14,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
   <script src="https://cdn.firebase.com/libs/angularfire/2.0.1/angularfire.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.0/ui-bootstrap-tpls.min.js"></script>
   <script src="https://www.gstatic.com/firebasejs/3.8.0/firebase.js"></script>
   <script>
     // Initialize Firebase
@@ -26,11 +29,9 @@
     firebase.initializeApp(config);
   </script>
   <script src="/scripts/app.js"></script>
-  <script src="/scripts/services/Room.js"></script>
-<<<<<<< HEAD
-=======
   <script src="/scripts/controllers/LandingCtrl.js"></script>
->>>>>>> 1c25e1284337c1780894bea5fc1009e6507f9f3e
+  <script src="/scripts/controllers/ModalCtrl.js"></script>
+  <script src="/scripts/services/Room.js"></script>
 </body>
 
 </html>
