--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="/styles/normalize.css">
   <link rel="stylesheet" href="/styles/main.css">
   <link rel="stylesheet" href="/styles/modalLook.css">
+  <link rel="stylesheet" href="/styles/user.css">
 </head>
 
 <body>
@@ -15,6 +16,7 @@
   <script src="https://cdn.firebase.com/libs/angularfire/2.0.1/angularfire.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.0/ui-bootstrap-tpls.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-cookies.js"></script>
   <script src="https://www.gstatic.com/firebasejs/3.8.0/firebase.js"></script>
   <script>
     // Initialize Firebase
@@ -32,6 +34,8 @@
   <script src="/scripts/controllers/LandingCtrl.js"></script>
   <script src="/scripts/controllers/ModalCtrl.js"></script>
   <script src="/scripts/services/Room.js"></script>
+  <script src="/scripts/services/Message.js"></script>
+  <script src="/scripts/services/BlocChatCookies.js"></script>
 </body>
 
 </html>
