--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 
 <head lang="en">
   <meta charset="UTF-8">
-  <title>Bloc Base Project</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Bloc Chat</title>
   <link rel="stylesheet" href="/styles/normalize.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="/styles/main.css">
   <link rel="stylesheet" href="/styles/modalLook.css">
-  <link rel="stylesheet" href="/styles/user.css">
 </head>
 
 <body>
