--- a/app/index.html
+++ b/app/index.html
@@ -1,47 +1,42 @@
 <!DOCTYPE html>
-<html ng-app="blocJams">
+<html ng-app="blocChat">
 
 <head lang="en">
   <meta charset="UTF-8">
-  <title>Bloc Jams Angular</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:400,800,600,700,300">
-  <link rel="stylesheet" type="text/css" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-  <link rel="stylesheet" type="text/css" href="styles/normalize.css">
-  <link rel="stylesheet" type="text/css" href="styles/main.css">
-  <link rel="stylesheet" type="text/css" href="styles/landing.css">
-  <link rel="stylesheet" type="text/css" href="styles/collection.css">
-  <link rel="stylesheet" type="text/css" href="styles/album.css">
-  <link rel="stylesheet" type="text/css" href="styles/player_bar.css">
+  <title>Bloc Chat</title>
+  <link rel="stylesheet" href="/styles/normalize.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/styles/main.css">
+  <link rel="stylesheet" href="/styles/modalLook.css">
 </head>
 
 <body>
-  <nav class="navbar">
-    <!-- navigation bar -->
-    <a ui-sref="landing" class="logo">
-      <img src="assets/images/bloc_jams_logo.png" alt="bloc jams logo">
-    </a>
-    <div class="links-container">
-      <a ui-sref="collection" class="navbar-link">collection</a>
-    </div>
-  </nav>
-  
   <ui-view></ui-view>
-  
-  <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/buzz/1.1.10/buzz.min.js"></script>
-  
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
+  <script src="https://cdn.firebase.com/libs/angularfire/2.0.1/angularfire.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.0/ui-bootstrap-tpls.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-cookies.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/3.8.0/firebase.js"></script>
+  <script>
+    // Initialize Firebase
+    var config = {
+      apiKey: "AIzaSyB1kc91uFZbYbyAYnnWoDJXrZ5L57bSbOI",
+      authDomain: "bloc-chat-a3efb.firebaseapp.com",
+      databaseURL: "https://bloc-chat-a3efb.firebaseio.com",
+      projectId: "bloc-chat-a3efb",
+      storageBucket: "bloc-chat-a3efb.appspot.com",
+      messagingSenderId: "530032852117"
+    };
+    firebase.initializeApp(config);
+  </script>
   <script src="/scripts/app.js"></script>
-  <script src="/scripts/services/Fixtures.js"></script>
-  <script src="/scripts/services/SongPlayer.js"></script>
   <script src="/scripts/controllers/LandingCtrl.js"></script>
-  <script src="/scripts/controllers/CollectionCtrl.js"></script>
-  <script src="/scripts/controllers/AlbumCtrl.js"></script>
-  <script src="/scripts/controllers/PlayerBarCtrl.js"></script>
-  <script src="/scripts/directives/seekBar.js"></script>
-  <script src="/scripts/filters/timecode.js"></script>
+  <script src="/scripts/controllers/ModalCtrl.js"></script>
+  <script src="/scripts/services/Room.js"></script>
+  <script src="/scripts/services/Message.js"></script>
+  <script src="/scripts/services/BlocChatCookies.js"></script>
 </body>
 
 </html>
