--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
 <head lang="en">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Bloc Chat</title>
+  <title>Sea Chat</title>
   <link rel="stylesheet" href="/styles/normalize.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="/styles/main.css">
